--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,6 +7,8 @@
   background-color: #212031;
   height: 144px;
   color: white;
+  position: relative;
+
 }
 
 .main_of_header {
@@ -16,6 +18,8 @@
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid rgba(128, 128, 128, 0.422);
+  position: relative;
+  z-index: 100;
 }
 
 .logotype {
