--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -207,3 +207,238 @@ input {
     left: -350px;
   }
 }
+
+
+
+.map{
+    position: absolute;
+    border: 5px solid #ffffff;
+    border-bottom: 3px solid #ff6b00;
+    border-right: 3px solid #ff6b00;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    margin-top: 10px;
+    width: 350px;
+    height: 300px;
+    box-sizing: border-box;
+}
+
+
+
+
+
+
+.modal_window{
+  top: calc(((100vh) - var(--index) * 30) / 2);
+  left: calc(((100vw) - var(--index) * 35) / 2);
+  position: fixed;
+  z-index: 110;
+  width: calc(var(--index) * 35);
+  height: calc(var(--index) * 30);
+  background-color: white;
+  border-radius: 3px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  padding-top: calc(var(--index) * .9);
+  padding-bottom: 30px;
+  overflow: scroll;
+
+  
+
+}
+
+.block_of_searched{
+  height: calc(var(--index) * 8);
+  width: 80%;
+  background-color:  #F4F4F4;
+  margin-top: 10px;
+  border-radius: 3px;
+  
+  
+}
+
+.info_block{
+  width: 70%;
+}
+
+.up_block{
+  display: flex;
+  justify-content: space-between;
+}
+
+.image_material{
+  width: 100%;
+}
+
+.picture_block{
+  width: 23%;
+  padding-left: calc(var(--index) * .8);
+  padding-top: calc(var(--index) * .6);
+
+
+}
+.picture_block img{
+  border-radius: 2px;
+}
+
+.name_product{
+  font-size: calc(var(--index) * .8);
+}
+
+.name_block{
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  height: calc(var(--index) * 2.5);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+
+.text_of_postav{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: calc(var(--index) * .6);
+  width: 50%;
+}
+
+.gray_text{
+  color: rgba(0, 0, 0, 0.526);
+ 
+
+}
+
+.text_of_postav p{
+  display: flex;
+}
+
+.tochki{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: end;
+  margin-top: 2px;
+}
+
+.line{
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.526);
+  flex: 0.9;
+  margin-bottom: 3px;
+  border-bottom-style:dotted;
+}
+
+.none{
+  overflow: hidden;
+}
+
+
+.podlozhka{
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: 104;
+  background-color: rgba(0, 0, 0, 0.491);
+
+  border: none;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+
+}
+
+.in_down{
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  margin-top: calc(var(--index) * 1);
+  padding-right: 20px;
+}
+.inputs_of_card{
+
+  display: flex;
+  justify-content: space-between;
+  width: 45%;
+
+
+  align-items: flex-end;
+
+
+}
+
+.inputs_of_card input{
+  margin: 0;
+  padding: 0;
+  width: 49%;
+  height: calc(var(--index) * 1.45);
+  font-size: calc(var(--index) * .45);
+  cursor: pointer;
+  color: white;
+  background-color: #ff6b00;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  border-radius: 4px;
+  transition: .3s linear;
+
+}
+
+.inputs_of_card :first-child{
+  background-color: white;
+  color: #ff6b00;
+  border: 1px solid #ff6b00;
+}
+
+.inputs_of_card :first-child:hover{
+  background-color: #ff6b00;
+  color: white;
+
+}
+.inputs_of_card :last-child:hover{
+  background-color: white;
+  color: #ff6b00;
+  border: 1px solid #ff6b00;
+
+}
+
+.in_up{
+  display: flex;
+  justify-content: space-between;
+}
+
+.whole_price{
+  font-size: calc(var(--index) * .5);
+  display: flex;
+  justify-content: space-between;
+  width: 62%;
+  align-items: center;
+}
+
+.whole_price_div{
+  display: flex;
+  align-items: flex-end;
+  width: 40%;
+  justify-content: space-between;
+}
+
+.whole_price_num{
+  font-size: calc(var(--index) * .6);
+}
+
+.error{
+  box-shadow: 0px 0px 15px rgba(255, 0, 0, 1);
+  animation-name: man;
+  animation-duration: 3.4s;
+
+}
+
+@keyframes man {
+  0% {
+    box-shadow: 0px 0px 15px rgba(255, 0, 0, 1);
+  }
+  100%{
+    box-shadow: 0px 0px 9px rgba(255, 0, 0, 0);
+  }
+}
