--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -54,15 +54,15 @@
 }
 
 .calc_center {
-  width: 65%;
+  width: 70%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
 
 .main_info {
-  font-size: 34px;
-  padding-top: 200px;
+
+  padding-top: calc(var(--index) * 8);
   width: 70%;
   line-height: calc(var(--index) * 2.9);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -102,13 +102,15 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  padding-top: 40px;
+  padding-top: calc(var(--index) * 1.7);
   color: white;
   align-items: flex-end;
+  font-size: calc(var(--index) * .6);
 }
 
 .material_block {
     position: relative;
+    
 }
 
 .material_find{
@@ -149,8 +151,9 @@ input {
   border-radius: 5px;
   border: none;
   outline: none;
-  padding-left: 20px;
+  padding-left: calc(var(--index) * 1);
   margin-top: 10px;
+  font-size: calc(var(--index) * .70);
 }
 
 .material_block {
@@ -210,21 +213,6 @@ input {
 
 
 
-.map{
-    position: absolute;
-    border: 5px solid #ffffff;
-    border-bottom: 3px solid #ff6b00;
-    border-right: 3px solid #ff6b00;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    margin-top: 10px;
-    width: 350px;
-    height: 300px;
-    box-sizing: border-box;
-}
 
 
 
@@ -248,7 +236,7 @@ input {
   padding-top: calc(var(--index) * .9);
   padding-bottom: 30px;
   overflow: scroll;
-
+  
   
 
 }
@@ -338,7 +326,7 @@ input {
 
 
 .podlozhka{
-  position: absolute;
+  position: fixed;
   width: 100vw;
   height: 100vh;
   z-index: 104;
@@ -348,6 +336,7 @@ input {
   top: 0;
   left: 0;
   cursor: pointer;
+  
 
 }
 
