--- a/src/components/Feedback/Feedback.module.css
+++ b/src/components/Feedback/Feedback.module.css
@@ -1,6 +1,6 @@
 .feedback_body {
   position: absolute;
-  width: 601px;
+  width: 650px;
   height: 504px;
   left: 590px;
   top: 300px;
@@ -18,30 +18,30 @@
   margin-left: 17px;
 }
 .body_input_name {
-  width: 300px;
+  width: 250px;
   height: 100px;
   margin-top: 20px;
   margin-left: 20px;
 }
 .body_input_phone {
-  width: 300px;
+  width: 250px;
   height: 100px;
   margin-top: 20px;
   margin-left: 20px;
 }
 .body_input_email {
-  width: 300px;
+  width: 250px;
   height: 100px;
   margin-top: 20px;
   margin-left: 20px;
 }
 .body_input_text {
   position: relative;
-  margin-right: 20px;
   width: 250px;
   height: 200px;
   margin-top: 20px;
   margin-left: 350px;
+  margin-right: 30px;
   bottom: 360px;
 }
 .input_name {
@@ -49,24 +49,94 @@
   border: 1px solid #e8e8e8;
   border-radius: 5px;
   width: 250px;
+  -webkit-box-shadow: 7px 4px 8px 0px rgba(74, 38, 15, 0.2);
+  -moz-box-shadow: 7px 4px 8px 0px rgba(74, 38, 15, 0.2);
+  box-shadow: 7px 4px 8px 0px rgba(74, 38, 15, 0.2);
 }
+
 .input_phone {
   background: #ffffff;
   border: 1px solid #e8e8e8;
   border-radius: 5px;
   width: 250px;
+  -webkit-box-shadow: 7px 4px 8px 0px rgba(74, 38, 15, 0.2);
+  -moz-box-shadow: 7px 4px 8px 0px rgba(74, 38, 15, 0.2);
+  box-shadow: 7px 4px 8px 0px rgba(74, 38, 15, 0.2);
 }
+
 .input_email {
   background: #ffffff;
   border: 1px solid #e8e8e8;
   border-radius: 5px;
   width: 250px;
+  -webkit-box-shadow: 7px 4px 8px 0px rgba(74, 38, 15, 0.2);
+  -moz-box-shadow: 7px 4px 8px 0px rgba(74, 38, 15, 0.2);
+  box-shadow: 7px 4px 8px 0px rgba(74, 38, 15, 0.2);
 }
+
 .input_text {
+  padding-left: 10px;
+  padding-top: 10px;
   background: #ffffff;
   border: 1px solid #e8e8e8;
   border-radius: 5px;
   width: 250px;
   height: 150px;
+  resize: none;
+  outline: none;
   text-align: start;
+  -webkit-box-shadow: 7px 4px 8px 0px rgba(74, 38, 15, 0.2);
+  -moz-box-shadow: 7px 4px 8px 0px rgba(74, 38, 15, 0.2);
+  box-shadow: 7px 4px 8px 0px rgba(74, 38, 15, 0.2);
+}
+
+.addButton {
+  width: 100px;
+  height: 50px;
+}
+.button {
+  position: absolute;
+  width: 240px;
+  height: 66px;
+  bottom: 130px;
+  margin-left: 360px;
+  top: 320px;
+  border: none;
+  cursor: pointer;
+
+  background: #ff6b00;
+  border-radius: 5px;
+}
+.sms {
+  margin-bottom: 7px;
+}
+.send {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  bottom: 200px;
+  right: 300px;
+  top: 300px;
+}
+.sendText {
+  font-family: "Gotham Pro";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 26px;
+  line-height: 147.69%;
+
+  text-align: center;
+
+  color: #000000;
+
+  width: 300px;
+}
+.sendImage {
+  margin-left: 60px;
+  margin-top: 20px;
+  width: 150px;
+  height: 130px;
+}
+.error {
+  box-shadow: 0px 0px 6px red;
 }
