--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -19,9 +19,9 @@
   height: calc(var(--index) * 50);
   max-height: 900px;
   position: relative;
-  position: absolute;
+
   width: 100%;
-  top: 0;
+  top: -150px;
   left: 0;
   z-index: 2;
 }
