--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -18,10 +18,10 @@
   background-size: cover;
   height: calc(var(--index) * 50);
   max-height: 900px;
-  position: relative;
+  position: absolute;
 
   width: 100%;
-  top: -150px;
+  top: 0;
   left: 0;
   z-index: 2;
 }
@@ -62,8 +62,8 @@
 
 .main_info {
 
-  padding-top: calc(var(--index) * 8);
-  width: 70%;
+  padding-top: calc(var(--index) * 9);
+  width: 64%;
   line-height: calc(var(--index) * 2.9);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: white;
@@ -73,6 +73,7 @@
   animation-name: calc;
   animation-duration: 1s;
   font-size: calc(var(--index) * 1.50);
+
 }
 
 .orange_text {
@@ -102,7 +103,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  padding-top: calc(var(--index) * 1.7);
+  padding-top: calc(var(--index) * 2.9);
   color: white;
   align-items: flex-end;
   font-size: calc(var(--index) * .6);
