--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -17,8 +17,9 @@
     justify-content: space-between;
     animation-name: chat;
     animation-duration: 1s;
-    background: rgb(255,107,0);
-background: linear-gradient(163deg, rgba(255,107,0,1) 0%, rgba(255,156,0,1) 100%);
+    
+background: rgb(254,242,229);
+background: linear-gradient(90deg, rgba(254,242,229,1) 0%, rgba(241,246,241,1) 100%);
 transition: cubic-bezier(.27,.4,.69,1.01);
     
 }
@@ -39,8 +40,8 @@ transition: cubic-bezier(.27,.4,.69,1.01);
     height: calc(var(--index) * 1);
     margin: 0;
     border-radius: 10px;
-    background-color: rgb(255, 255, 255);
-    color: rgb(255,107,0);
+    background-color: rgb(39, 39, 39);
+    color: rgb(255, 255, 255);
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
@@ -59,7 +60,7 @@ transition: cubic-bezier(.27,.4,.69,1.01);
     height: calc(var(--index) * 1.4);
     background: none;
     font-size: calc(var(--index) * 1);
-    color: white;
+    color: black;
     border-radius: 300px;
     cursor: pointer;
     
@@ -88,22 +89,35 @@ transition: cubic-bezier(.27,.4,.69,1.01);
 
 }
 
-.text_block{
-
+.text_block, .your_text_block{
+    margin-top: calc(var(--index) * .3);
     max-width: calc(1vw * 17.4);
-    border-radius: 3px;
-    padding-left: calc(var(--index) * .5);
-    padding-top: calc(var(--index) * .2);
-    padding-bottom: calc(var(--index) * .2);
+    padding-left: calc(var(--index) * 1);
+    padding-right: calc(var(--index) * 1);
+    border-radius: calc(var(--index) * .5);
+    padding-top: calc(var(--index) * .3);
+    padding-bottom: calc(var(--index) * .3);
     color: rgb(255, 255, 255);
-
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.134);
     box-sizing: border-box;
+    background: rgb(255,107,0);
+background: linear-gradient(163deg, rgba(255,107,0,1) 0%, rgba(255,156,0,1) 100%);
 
     
+}
+
+
+.your_text_block{
+    background: rgb(235, 233, 232);
+    background: linear-gradient(163deg, rgb(226, 129, 60) 0%, rgba(255,156,0,1) 100%);
+    max-width: calc(1vw * 17.4);
+
 }
 .message{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: calc(var(--index) * .67);
+    
+
     
 }
 
@@ -126,37 +140,58 @@ transition: cubic-bezier(.27,.4,.69,1.01);
     font-size: calc(var(--index) * 1);
     margin: 0;
     cursor: pointer;
-    color: white;
+    color: black;
     padding: 0;
     padding-right: calc(var(--index) * 1.2);
 }
 
 .messages{
     overflow-y: scroll;
-    height: calc(var(--index) * 17);
-    padding-left: calc(var(--index) * .7);
-  
+    height: calc(var(--index) * 23);
+    padding-left: calc(var(--index) * .35);
+    padding-bottom: calc(var(--index) * .55);
+    
     
 }
 
 
 
-.mess{
+.mess, .your_mess{
     margin-top: calc(var(--index) * 1);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     min-height: calc(var(--index) * 2.4);
     word-wrap: break-word;
+    width: max-content;
+    
+    
+
 
 }
 
+.your_mess{
+    display: flex;
+    align-items: flex-end;
+    padding-right: calc(var(--index) * .8);
+    width: 100%;
+}
 
-.name_block p{
-    color: white;
+.name_block{
+padding-left: calc(var(--index) * 0);
+}
+.name_block p, .you p{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
     font-size: calc(var(--index) * .6);
 
 
+
+
+}
+.chat_blocks{
+    color: rgb(31, 31, 31);
+    border-color: rgb(31, 31, 31);
 }
 
 @keyframes chat {
@@ -207,8 +242,8 @@ transition: cubic-bezier(.27,.4,.69,1.01);
     width: 98%;
     background: none;
     cursor: pointer;
-    border: 1px solid white;
-    border-radius: 10px;
+    border: 1px solid rgb(31, 31, 31);
+    border-radius: 5px;
     margin-top: calc(var(--index) * 1.2);
 }
 
@@ -237,4 +272,23 @@ transition: cubic-bezier(.27,.4,.69,1.01);
 
 .img_update{
     width: 14px;
+}
+
+
+.date, .your_date, .your_date_line{
+    display: flex;
+    justify-content: end;
+    font-size: calc(var(--index) * .45);
+    padding-top: 1px;
+    padding-bottom: 0px;
+
+}
+
+.date{
+    justify-content: start;
+
+}
+
+.your_date_line{
+
 }
