Исправил верстку чата 2

--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -63,6 +63,7 @@ transition: cubic-bezier(.27,.4,.69,1.01);
     color: rgb(35, 35, 35);
     border-radius: 300px;
     cursor: pointer;
+    
 
     
 }
@@ -166,6 +167,8 @@ background: linear-gradient(163deg, rgba(255,107,0,1) 0%, rgba(255,156,0,1) 100%
     word-wrap: break-word;
     width: max-content;
     
+    padding-left: calc(var(--index) * .3);
+    
     
 
 
@@ -179,12 +182,13 @@ background: linear-gradient(163deg, rgba(255,107,0,1) 0%, rgba(255,156,0,1) 100%
 }
 
 .name_block{
-padding-left: calc(var(--index) * 0);
+padding-left: calc(var(--index) * 0.09);
 }
 .name_block p, .you p{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: black;
     font-size: calc(var(--index) * .6);
+
 
 
 
