--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -16,7 +16,7 @@
   background-position: center center;
   background-size: cover;
   height: calc(var(--index) * 50);
-  max-height: 900px;
+  max-height: calc(var(--index) * 39.8);
   position: absolute;
 
   width: 100%;
@@ -83,7 +83,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 900px;
+  height: calc(var(--index) * 39.8);
+
   width: 100%;
   z-index: 0;
   background: linear-gradient(92.36deg, #212031 57.27%, rgba(33, 32, 49, 0.52) 97.73%);
@@ -125,6 +126,7 @@
   padding-top: 20px;
   display: flex;
   flex-direction: column;
+  z-index: 200;
 }
 .product_names {
   margin-top: 15px;
@@ -421,4 +423,57 @@ input {
   100% {
     box-shadow: 0px 0px 9px rgba(255, 0, 0, 0);
   }
+}
+
+
+
+
+
+.down_info{
+  width: 100%;
+  position: relative;
+  z-index: 1;
+  padding-top: calc(var(--index) * 4);
+  display: flex;
+  justify-content: space-between;
+
+}
+
+
+.down_in_info{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 32%;
+  border-bottom: 2px solid rgba(128, 128, 128, 0.576);
+  height: calc(var(--index) * 7);
+}
+
+
+.text_in_down{
+  text-align: center;
+  color: white;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: calc(var(--index) * .8);
+}
+
+.text_text{
+  padding-top: calc(var(--index) * 1.2);
+}
+
+.middle_img img{
+width: calc(var(--index) * 2.3);
+}
+
+
+.delivery{
+  width: calc(var(--index) * 30.8);
+
+}
+
+
+
+.podlozhka_main{
+  width: 100%;
+  height: calc(var(--index) * 33.41);
 }
