--- a/src/components/Feedback/Feedback.module.css
+++ b/src/components/Feedback/Feedback.module.css
@@ -1,3 +1,6 @@
+:root {
+    --index:calc(1vw + 1vh)
+}
 .feedback_body {
   position: absolute;
   width: 650px;
@@ -138,5 +141,7 @@
   height: 130px;
 }
 .error {
-  box-shadow: 0px 0px 6px red;
+  -webkit-box-shadow: 0px 6px 5px 0px rgba(255, 0, 0, 0.44);
+  -moz-box-shadow: 0px 6px 5px 0px rgba(255, 0, 0, 0.44);
+  box-shadow: 0px 6px 5px 0px rgba(255, 0, 0, 0.44);
 }
