--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -18,8 +18,8 @@
   width: 60%;
   justify-content: space-between;
 }
-.product_title {
-  width: 60%;
+.product_title_box {
+  width: 50%;
   text-align: center;
   font-weight: 700;
   color: #7b7b7b;
@@ -27,6 +27,7 @@
 .price_title,
 .total_title {
   width: 20%;
+  text-align: center;
   font-weight: 700;
   color: #7b7b7b;
 }
@@ -38,7 +39,6 @@
 }
 .products_list {
   border-radius: 5px;
-
   width: 67%;
   margin-top: 20px;
 }
@@ -54,12 +54,14 @@
 }
 .product_box {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   background-color: #fafafa;
   border-radius: 5px;
   margin-bottom: 10px;
   padding: 7px 7px 7px 7px;
   height: 80px;
+  box-shadow: #ff6b00;
 }
 .name_and_pic_box {
   display: flex;
@@ -84,7 +86,7 @@
 .product_image_box {
   position: relative;
   border-radius: 5px;
-  width: 20%;
+  width: 90px;
 
   overflow: hidden;
 }
@@ -103,7 +105,10 @@
   text-align: center;
   align-items: center;
   justify-content: center;
-  width: 10%;
+  width: 30px;
+  background: none;
+  border: none;
+  cursor: pointer;
 }
 .total {
   display: flex;
@@ -111,4 +116,141 @@
   align-items: center;
   justify-content: center;
   width: 20%;
+  font-size: 14px;
+  font-weight: 700;
+}
+.product_title {
+  padding: 7px 7px 7px 20px;
+  width: 10%;
+}
+
+.remove_loader {
+  width: 30px;
+  height: 30px;
+  overflow: hidden;
+}
+.remove_loader > div {
+  height: 30px;
+  width: 30px;
+  border: 5px solid rgba(255, 255, 255, 0);
+  border-top-color: rgb(228, 48, 24);
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  border-radius: 50%;
+  animation: spin 0.7s infinite linear;
+}
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loader {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  position: relative;
+  border: 4px solid #ff6b00;
+  top: 50%;
+  animation: loader 1.5s infinite ease;
+}
+
+.loader_inner {
+  vertical-align: top;
+  display: inline-block;
+  width: 100%;
+  background-color: #ff6b00;
+  animation: loader-inner 2s infinite ease-in;
+}
+
+@keyframes loader {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  25% {
+    transform: rotate(180deg);
+  }
+
+  50% {
+    transform: rotate(180deg);
+  }
+
+  75% {
+    transform: rotate(360deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes loader-inner {
+  0% {
+    height: 0%;
+  }
+
+  25% {
+    height: 0%;
+  }
+
+  50% {
+    height: 100%;
+  }
+
+  75% {
+    height: 100%;
+  }
+
+  100% {
+    height: 0%;
+  }
+}
+
+.load_wrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+}
+.cart_is_empty {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  font-weight: 700;
+  font-size: 50px;
+  color: #7b7b7b;
+  padding-top: 50px;
+}
+.form .title {
+  margin-bottom: 15px;
+  height: 68px;
+  font-size: 14px;
+  font-weight: 700;
+}
+.form {
+  padding: 30px 30px 0px 30px;
+  margin-bottom: 50px;
+}
+.order_title {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 68px;
+}
+.button_order {
+  padding: 0;
+  background-color: #ff6b00;
+  color: #fafafa;
+  font-weight: 700;
+  cursor: pointer;
+}
+.total_end {
+  display: flex;
+  justify-content: end;
+  font-weight: 700;
 }
