--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -63,11 +63,13 @@ width: calc(var(--index) * 3);
   right: 10px;
   text-decoration: none;
   color: white;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
   padding-right: calc(var(--index) * 1.4);
   font-size: calc(var(--index) * .7);
 }
 
 .regist{
-
+background: none;
+border: none;
+cursor: pointer;
 }
