--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -109,6 +109,8 @@
 
 .material_find {
   display: none;
+  position: absolute;
+
 }
 
 .show {
@@ -119,16 +121,18 @@
   color: black;
   font-size: calc(var(--index) * 1);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  position: absolute;
   min-height: 200px;
   margin-top: 5px;
   padding-left: 20px;
   padding-top: 20px;
   display: flex;
   flex-direction: column;
+  position: absolute;
   z-index: 200;
+
 }
 .product_names {
+  
   margin-top: 15px;
   text-align: left;
   max-width: 90%;
@@ -138,9 +142,11 @@
   padding: 0;
   border-bottom: 0.4px solid rgba(128, 128, 128, 0.092);
   padding-bottom: 5px;
+  position: absolute;
 }
 
 input {
+
   height: calc(var(--index) * 2.5);
   width: 100%;
   border-radius: 5px;
@@ -205,14 +211,15 @@ input {
 }
 
 .modal_window {
-  top: calc(((100vh) - var(--index) * 30) / 2);
-  left: calc(((100vw) - var(--index) * 35) / 2);
+  top: calc(((100vh) - var(--index) * 27) / 2);
+  left: calc(((100vw) - var(--index) * 34) / 2);
   position: fixed;
-  z-index: 110;
-  width: calc(var(--index) * 35);
-  height: calc(var(--index) * 30);
-  background-color: white;
-  border-radius: 3px;
+  z-index: 106;
+  width: calc(var(--index) * 34);
+  height: calc(var(--index) * 18);
+background: none;
+  border-radius: 20px;
+
 
   display: flex;
   flex-direction: column;
@@ -221,14 +228,40 @@ input {
   padding-top: calc(var(--index) * 0.9);
   padding-bottom: 30px;
   overflow: scroll;
+  animation-name: modal;
+  animation-duration: 1s;
+
+  
+}
+@keyframes modal{
+  0%{
+
+    transform: scale(0);
+  }
+  100%{
+
+    transform: scale(1);
+  }
 }
 
 .block_of_searched {
   height: calc(var(--index) * 8);
   width: 80%;
   background-color: #f4f4f4;
+  box-shadow: 0px 10px 40px rgba(60, 60, 60, 0.177);
   margin-top: 10px;
-  border-radius: 3px;
+  border-radius: 10px;
+  transition: .3s linear;
+  cursor: pointer;
+  position: relative;
+  z-index: 114;
+}
+
+.block_of_searched:hover{
+
+transform: scale(1.05) translateY(2px);
+box-shadow: 0px 10px 10px rgba(255, 255, 255, 0.177);
+
 }
 
 .info_block {
@@ -304,7 +337,7 @@ input {
   width: 100vw;
   height: 100vh;
   z-index: 104;
-  background-color: rgba(0, 0, 0, 0.491);
+  background-color: rgba(0, 0, 0, 0.2);
 
   border: none;
   top: 0;
@@ -362,11 +395,11 @@ input {
 
 .inputs_of_card :first-child {
   background-color: white;
-  color: #2dcc70;
-  border: 1px solid #2dcc70;
+  color: #ff6b00;
+  border: 1px solid #ff6b00;
 }
 .inputs_of_card :first-child:hover {
-  background-color: #2dcc70;
+  background-color: #ff6b00;
   color: white;
 }
 .remove_product :first-child {
@@ -382,8 +415,8 @@ input {
 
 .inputs_of_card :last-child:hover {
   background-color: white;
-  color: #2dcc70;
-  border: 1px solid #2dcc70;
+  color: #ff6b00;
+  border: 1px solid #ff6b00;
 }
 
 .in_up {
@@ -476,4 +509,12 @@ width: calc(var(--index) * 2.3);
 .podlozhka_main{
   width: 100%;
   height: calc(var(--index) * 33.41);
+}
+
+.none{
+  display: none;
+}
+
+.modal_window1{
+  display: none;
 }
