--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,5 +1,5 @@
 .loginBody {
-  position: absolute;
+  
   width: 558px;
   min-height: 500px;
 
@@ -7,6 +7,10 @@
   left: 301px;
   top: 257px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.bod{
+  display: flex;
+  justify-content: center;
 }
 .inputsDiv {
   width: 550px;
