--- a/src/pages/Auth/Auth.module.css
+++ b/src/pages/Auth/Auth.module.css
@@ -1,11 +1,15 @@
 .body {
-  position: absolute;
   width: 458px;
   min-height: 720px;
   border-radius: 15px;
   left: 391px;
   top: 257px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.bod{
+  display: flex;
+  justify-content: center;
 }
 .header {
   display: flex;
@@ -15,10 +19,7 @@
   margin-top: 20px;
 }
 .singUpText {
-
-  position: absolute;
   top: 20px;
-
   margin-right: 210px;
   font-size: 25px;
   color: black;
@@ -156,7 +157,7 @@
 }
 .end {
   width: 200px;
-  position: absolute;
+
   margin-left: 300px;
   bottom: 120px;
   top: 610px;
